# shctrl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/knowledge/: git-maintenance-playbook.md  log-service-runbook.md  windows-log-playbook.md
integrations/bash/: shctrl.bash
integrations/powershell/: Shctrl.psm1
integrations/zsh/: shctrl.zsh
src/shctrl/: __init__.py  cli.py  config.py  context.py  models.py  ollama_client.py  orchestrator.py  prompts.py  retriever.py  risk.py  telemetry.py  utils.py
tests/: test_orchestrator.py  test_prompt.py  test_retriever.py  test_risk.py
