[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shctrl"
version = "0.1.0"
description = "Terminal-native local shell command assistant with retrieval grounding and deterministic risk annotation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jayden Elangikal" }
]
keywords = [
  "cli",
  "llm",
  "ollama",
  "shell",
  "terminal",
  "retrieval-augmented-generation",
  "risk-scoring"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Shells"
]

[project.scripts]
shctrl = "shctrl.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
